[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cfr"
authors = [{name = "KOLANICH"}]
description = "Just python bindings for `CFR` Java decompiler."
readme = "ReadMe.md"
keywords = ["compile", "java", "JVM"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KOLANICH-libs/cfr.py"}
requires-python = ">=3.4"
dependencies = [
	"JAbs" # @ git+https://codeberg.org/KOLANICH-libs/JAbs.py
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
